--- a/package.json
+++ b/package.json
@@ -9,21 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "framer-motion": "^12.23.25",
-    "openai": "^6.9.1",
+    "react-dom": "^19.2.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "@google/genai": "^1.30.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "prettier": "3.7.3",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
